Spacing Issues
- Fixed spacing
- Edited sizes of text
- Edited sizes of images

--- a/Project/Resume/style.css
+++ b/Project/Resume/style.css
@@ -8,7 +8,7 @@ header {
     background-color: #fffff2;
     padding-left: 20px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-right: 20px;
 }
 
@@ -22,7 +22,7 @@ header {
 } */
 
 nav {
-    padding-top: 20px;
+    padding-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,19 +44,19 @@ li {
 
 .container {
     max-width: 1000px;
-    margin: 20px auto;
+    margin: 30px auto;
     padding: 20px;
     background-color: #fffff2;
 }
 
 h1 {
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 h2 {
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 
 h3 {
@@ -68,7 +68,7 @@ h2 {
     margin-top: 10px;
     font-family: 'Playfair Display', serif;
     color: #678D58;
-    font-size: 25px;
+    font-size: 23px;
 }
 
 h1,
@@ -87,7 +87,7 @@ nav a {
     color: #80A1C1;
     text-decoration: none;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 nav a:hover {
@@ -105,7 +105,7 @@ h3,
 p, 
 label {
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #424B54;
     font-style: italic;
 }
@@ -113,7 +113,7 @@ label {
 article {
     font-family: 'Roboto', sans-serif;
     color: #424B54;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .container {
@@ -172,7 +172,7 @@ img {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 25px;
+    font-size: 23px;
     cursor: pointer;
     background-color: #fffff2;
     color: #424B54;
@@ -209,7 +209,7 @@ input,
 textarea {
     color: #424B54;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     width: 100%;
     padding: 10px;
     margin-bottom: 16px;
